--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\mmmceniry\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat80.properties
-j2ee.server.home=//home.iowa.uiowa.edu/mmmceniry/tomcat-8
-j2ee.server.instance=tomcat80:home=\\\\home.iowa.uiowa.edu\\mmmceniry\\tomcat-8
-user.properties.file=C:\\Users\\mmmceniry\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+deploy.ant.properties.file=C:\\Users\\Danielle\\AppData\\Roaming\\NetBeans\\8.1\\tomcat80.properties
+j2ee.server.home=C:/tomcat-8
+j2ee.server.instance=tomcat80:home=C:\\tomcat-8
+user.properties.file=C:\\Users\\Danielle\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
