--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\zhart\\AppData\\Roaming\\NetBeans\\8.0.2\\tomcat80.properties
-j2ee.server.home=//home.iowa.uiowa.edu/zhart/tomcat-8
-j2ee.server.instance=tomcat80:home=\\\\home.iowa.uiowa.edu\\zhart\\tomcat-8
+deploy.ant.properties.file=C:\\Users\\Danielle\\AppData\\Roaming\\NetBeans\\8.1\\tomcat80.properties
+j2ee.server.home=C:/tomcat-8
+j2ee.server.instance=tomcat80:home=C:\\tomcat-8
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\zhart\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\Danielle\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
